--- a/package.json
+++ b/package.json
@@ -8,13 +8,14 @@
   "scripts": {
     "build": "webpack --config webpack.config.js --mode=production",
     "watch": "webpack --config webpack.config.js --watch",
-    "server": "webpack-dev-server"
+    "server": "webpack-dev-server --hot --inline"
   },
   "devDependencies": {
     "@babel/cli": "^7.1.5",
     "@babel/core": "^7.1.6",
     "babel-loader": "^8.0.4",
     "css-loader": "^1.0.1",
+    "style-loader": "^0.23.1",
     "webpack": "^4.26.0",
     "webpack-cli": "^3.1.2",
     "webpack-dev-server": "^3.1.10"
